--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prismaMigrateDev": "dotenv -e .env.development.local -- npx prisma migrate dev"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
