--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@prisma/client": "^5.18.0",
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18",
