--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@nextui-org/date-picker": "^2.1.6",
+    "@nextui-org/dropdown": "^2.1.29",
+    "@nextui-org/input": "^2.2.4",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
     "@prisma/client": "^5.18.0",
+    "framer-motion": "^11.3.30",
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18",
