--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@nextui-org/button": "^2.0.37",
     "@nextui-org/date-picker": "^2.1.6",
     "@nextui-org/dropdown": "^2.1.29",
     "@nextui-org/input": "^2.2.4",
