--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/date-picker": "^2.1.6",
     "@nextui-org/dropdown": "^2.1.29",
     "@nextui-org/input": "^2.2.4",
+    "@nextui-org/select": "^2.2.5",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@prisma/client": "^5.18.0",
