Freaking clerk login page man :'(

--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
-    "@nextui-org/button": "^2.0.37",
-    "@nextui-org/date-picker": "^2.1.6",
-    "@nextui-org/dropdown": "^2.1.29",
-    "@nextui-org/input": "^2.2.4",
-    "@nextui-org/select": "^2.2.5",
-    "@nextui-org/system": "^2.2.5",
-    "@nextui-org/theme": "^2.2.9",
+    "@clerk/themes": "^2.1.25",
+    "@internationalized/date": "^3.5.5",
+    "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.18.0",
     "framer-motion": "^11.3.30",
     "next": "14.2.5",
