--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@internationalized/date": "^3.5.5",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.18.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
