--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "svix": "^1.32.0"
   },
   "devDependencies": {
     "@types/node": "^20",
