--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "prismaMigrateDev": "dotenv -e .env.development.local -- npx prisma migrate dev"
+    "migrate": "dotenv -e .env.development.local -- npx prisma migrate dev"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
