--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "framer-motion": "^11.3.30",
     "next": "14.2.13",
     "next-pwa": "^5.6.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.32.0"
