--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^5.5.2",
     "@clerk/themes": "^2.1.25",
     "@internationalized/date": "^3.5.5",
-    "@nextui-org/react": "^2.4.6",
+    "@heroui/react": "2.6.14",
     "@prisma/client": "^5.19.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
